# cybercrime-monitor

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: investigate-all-the-agentic-noble-abelson.md
config/: keywords.yaml.example  sources.yaml.example
src/cybercrime_monitor/: country.py  db.py  health.py  health_registry.py  http.py  models.py  notifier.py  prompts.py  scheduler.py  settings.py  significance.py
src/cybercrime_monitor/api/: app.py  intel_export.py  routes.py  sse.py
src/cybercrime_monitor/collectors/: _text.py  base.py  hibp.py  html_forum.py  mastodon.py  nitter.py  paste.py  ransomware_live.py  rss.py
src/cybercrime_monitor/embeddings/: backend.py  index.py  job.py
src/cybercrime_monitor/enrich/: cve.py  cve_meta.py  ioc.py  mitre.py
src/cybercrime_monitor/hermes/: runner.py  usage_ingest.py
src/cybercrime_monitor/llm/: backend.py  job.py
src/cybercrime_monitor/pipeline/: actor_profiles.py  campaigns.py  correlate.py  cross_correlate.py
src/marketplace_monitor/: db.py  main.py  matcher.py  scheduler.py  settings.py
systemd/: cybercrime-monitor.service  marketplace-monitor.service
tests/: conftest.py  test_accounts.py  test_case_cve_meta_stats.py  test_collector_text.py  test_convergence_and_evaluator.py  test_country.py  test_cve_meta_enrich.py  test_heal_prune.py  test_health_registry.py  test_hermes_runner.py  test_investigate.py  test_ioc_enrich.py  test_landscape_and_activity.py  test_mitre_enrich.py  test_significance.py  test_source_access.py  test_token_usage.py
(+36 files in other folders)
