[project]
name = "cybercrime-monitor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "httpx-socks>=0.4",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "selectolax>=0.3",
    "feedparser>=6.0",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "watchfiles>=1.0",
    "regex>=2026.5.9",
    "ruamel.yaml>=0.18",
]

[project.scripts]
cybercrime-monitor = "cybercrime_monitor.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cybercrime_monitor"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
